# linux-clipboard

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: deb-postrm.sh  deb-prerm.sh  uninstall.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  clipboard.rs  commands.rs  db.rs  gnome.rs  hotkey.rs  i18n.rs  images.rs  lib.rs  main.rs  models.rs  paste.rs  portal.rs  session.rs  settings.rs  state.rs  tray.rs  updater.rs  util.rs  window.rs
src/components/: ClipboardItem.tsx  ClipboardPanel.tsx  EmptyState.tsx  Icons.tsx  SearchBar.tsx  Toast.tsx
src/hooks/: useHistory.ts  useSettings.ts
src/lib/: accelerator.ts  i18n.tsx  ipc.ts
src/views/: SettingsView.tsx
