[package]
name = "linux-clipboard"
version = "0.1.0"
description = "Windows-10 style clipboard history manager for Linux"
authors = ["datluong"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (a Windows
# linker quirk); harmless elsewhere.
name = "linux_clipboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tauri plugins we keep (desktop integration that has no good native crate).
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"                           # native confirm dialog (Wayland auto-paste prompt)

# Native building blocks (backend owns clipboard, storage, paste, hashing).
arboard = "3"                                      # clipboard read/write (X11 + Wayland)
enigo = "0.2"                                      # synthetic Ctrl+V (X11 needs libxdo)
rusqlite = { version = "0.32", features = ["bundled"] }  # history DB (SQLite compiled in)
image = "0.25"                                     # decode/encode PNG + thumbnails
sha2 = "0.10"                                      # content hashing for dedup/suppress

# Wayland auto-paste via the XDG RemoteDesktop portal + libei (see portal.rs).
# Replaces ydotool/uinput: sends Ctrl+V through the compositor, no /dev/uinput.
# Extracted from the wdotool project; these are the primitives its libei
# backend is built on. Needs system libxkbcommon (present on any GNOME/KDE).
ashpd = { version = "0.13", features = ["tokio", "remote_desktop", "screencast"] }  # portal.RemoteDesktop (remote_desktop pulls in screencast)
reis = { version = "0.6", features = ["tokio"] }    # libei (EI) protocol client
xkbcommon = "0.9"                                   # keysym -> keycode via server keymap
enumflags2 = "0.7"                                  # BitFlags<DeviceCapability/DeviceType>
futures-util = "0.3"                                # StreamExt for the libei event stream
tokio = { version = "1", features = ["rt", "net", "time", "sync"] }  # runtime + mpsc for the libei worker

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
